--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,77 @@
+
+
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      <app-header></app-header>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <div class="containerPokemon">
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <div>
+
+  
+    <div>
+      <img src="/assets/guess/snorlax.png" alt="">
+    </div>
+
+<div style="display: flex; justify-content: center; margin-top: 1em;">
+  <input type="text" class="inputStyle" id="input"> 
+</div>
+
+</div>
+</div>
+
+    <section class="containerAll">
+
+
+      <div class="containerLetter">
+
+        <h1 id="letter1" class="letterStyle">S</h1>
+
+      </div>
+
+      <div class="containerLetter">
+
+        <h1 id="letter2" class="letterStyle">N</h1>
+
+      </div>
+
+      <div class="containerLetter">
+
+        <h1 id="letter3" class="letterStyle">O</h1>
+
+      </div>
+
+      <div class="containerLetter">
+
+        <h1 id="letter4" class="letterStyle">R</h1>
+
+      </div>
+
+      <div class="containerLetter">
+
+        <h1 id="letter5" class="letterStyle">L</h1>
+
+      </div>
+
+      <div class="containerLetter">
+
+        <h1 id="letter6" class="letterStyle">A</h1>
+
+      </div>
+
+      <div class="containerLetter">
+
+        <h1 id="letter7" class="letterStyle">X</h1>
+
+      </div>
+
+    </section>
+
 </ion-content>
