--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,7 +15,13 @@
 
     <div>
 
-  
+
+      <div style="display: flex; gap: 0.5em;">
+     <img class="heartStyle" src="/assets/guess/heart.png" alt=""> <h1 class="livesStyle" id="lives">{{lives}}</h1>
+    </div>
+
+
+
     <div>
       <img src="/assets/guess/snorlax.png" alt="">
     </div>
