--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -41,3 +41,15 @@ margin-bottom: 5em;
     border: 1px solid burlywood;
 
 }
+
+.heartStyle {
+
+    width: 20px;
+}
+
+.livesStyle {
+
+    color: red;
+    text-shadow: 2px 2px 2px black;
+    
+}
